# Data-compression-

./: .gitignore  README.md  cli.py  data.csv  data.json  make_png.py  make_wav.py  requirements.txt
core/: file_detector.py
models/: text_compressor.py
storage/: ipfs_handler.py
universal-compressor/: cli.py  pyproject.toml  structure.txt  test.txt
universal-compressor/core/: file_type_detector.py  model_router.py  ppc_wrapper.py
universal-compressor/models/: audio_compressor.py  audio_vqvae.py  image_vqvae.py  text_compressor.py
universal-compressor/storage/: ipfs_handler.py
universal-compressor/universal-compressor/core/: wrapper.py
universal-compressor/universal-compressor/examples/: hello.txt
utils/: detect_type.py
