[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-compressor"
version = "0.1.0"
description = "A deep learning-based universal file compression tool."
authors = [
    { name = "Parth Kairamkonda", email = "your_email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "torch",
    "scikit-learn",
    "streamlit",
    "gradio"
]

[project.scripts]
pcc = "cli:main"
